<resources>
    <string name="app_name">Meet Ball</string>
    <string name="login">Login</string>
    <string name="meetball">MeetBall</string>
    <string name="lupa_password">Lupa password ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="login_sebagai_admin">Login Sebagai Admin</string>
    <string name="home_text">Selamat Datang di MeetBall</string>
</resources>