<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_200"
    tools:context=".LoginActivity">


    <!-- A CardView that contains a TextView -->

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_back"
        android:id="@+id/back"/>

    <TextView
        android:id="@+id/textMet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meetball"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"
        android:textSize="35dp"
        android:fontFamily="@font/poppins_bold"/>

    <ImageView
        android:id="@+id/baso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMet"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/baso" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_below="@+id/baso"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="Email"
                android:layout_marginTop="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textEmail"
                    android:inputType="text"
                    android:fontFamily="@font/poppins_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/textPwd"
                    android:fontFamily="@font/poppins_regular" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lupaPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColorLink="@color/secondary_700"
                android:text="@string/lupa_password"
                android:layout_marginEnd="15dp"
                android:layout_marginVertical="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:id="@+id/btnLogin"
                android:layout_marginHorizontal="15dp"
                android:text="Login"
                android:fontFamily="@font/poppins_medium"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Atau"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_regular"/>

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textColor="@color/primary_700"
                android:backgroundTint="@color/primary_50"
                android:layout_marginHorizontal="15dp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>