<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_200"
    tools:context=".LoginActivity">


    <!-- A CardView that contains a TextView -->

    <TextView
        android:id="@+id/textMet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/meetball"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="35dp"
        android:textSize="35dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/baso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="114dp"
        android:layout_below="@+id/textMet"
        android:src="@drawable/baso" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:layout_below="@+id/baso"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="Username"
                android:layout_marginTop="40dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textUsernameReg"
                    android:inputType="text"
                    android:fontFamily="@font/poppins_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="Password"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPwdReg"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_regular"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:hint="Konfirmasi Password"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textPwdCon"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_regular"/>

            </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/sign_up"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

<!--                <TextView-->
<!--                    android:id="@+id/sudahPunyaAkun"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Sudah Punya Akun ?"-->
<!--                    android:layout_marginLeft="40dp"-->
<!--                    android:layout_marginTop="18dp"-->
<!--                    android:textColor="@color/black" />-->

<!--                <Button-->
<!--                    android:id="@+id/btnLogin"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="122dp"-->
<!--                    android:layout_marginLeft="122dp"-->
<!--                    android:layout_marginRight="40dp"-->
<!--                    android:layout_toEndOf="@+id/sudahPunyaAkun"-->
<!--                    android:layout_toRightOf="@+id/sudahPunyaAkun"-->
<!--                    android:text="@string/login_" />-->


            </RelativeLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>